# rism

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  rebuild_and_run.sh  requirements.txt  setup.py
data/: brittanica.txt  brittanica_b1.txt  brittanica_dirty.txt  reference_texts.csv
gpt-dev/: auto_eval.py  head.py  model_class.py  original_train.py  sparse_attention.py  subword_tokenizer.py  train.py
notebooks/: gpt4_agent.ipynb  gpt4_agent_modify_alpaca_lora.ipynb  gpt4_modify_mpt7b.ipynb  replit_extension_gpt4_agent.ipynb  selfmodifai_gpt_dev.ipynb  selfmodifai_mpt_7b_test.ipynb  selfmodifai_test.ipynb
other_docker/gpt4/: docker-compose.yml
other_docker/local_llama/: Dockerfile
prompts/: messages.json  new_architecture.json  training_editor.json
prompts/from_scratch/: better_than_transformer.txt
prompts/nanogpt/: engineer.txt  researcher.txt
prompts/nanogpt/researcher/: evolve_attention.txt  modify_attention.txt  old_researcher.txt
rism/: __main__.py  helpers.py
rism/agents/fine_tunable_agents/: codellama_generate.py  replace_code.py
selfmodifai/: __main__.py  cli_parser.py  gpt4_agent.py  handle_too_long_context.py  helpers.py  non_bash.py
selfmodifai/agents/hf_agent/: hf_query.py
selfmodifai/agents/open_source_agent/: open_source_agent.py  replace_code.py
selfmodifai/falcon_40b_agent/: falcon_40b_agent.py  falcon_40b_generate.py
selfmodifai/gpt4_agent/: gpt4_agent.py  handle_too_long_context.py  helpers.py
selfmodifai/preprocessing/: clean_brittanica.py  create_reference_texts.py
(+43 files in other folders)
